force-app/src/objects/c2g__StatementLog__c.object
<CustomObject>
    <description>Custom object used to store all customer statement logs.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Statement Logs</relationshipLabel>
        <relationshipName>StatementLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LogType__c</fullName>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>Excluded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReasonForExclusion__c</fullName>
        <description>This field stores the reason for excluding a statement.</description>
        <label>Reason For Exclusion</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__StatementSentDate__c</fullName>
        <label>Statement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Statement__c</fullName>
        <label>Customer Statement</label>
        <referenceTo>c2g__Statement__c</referenceTo>
        <relationshipLabel>Customer Statement Logs</relationshipLabel>
        <relationshipName>StatementLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Customer Statement Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__Statement__c</columns>
        <columns>c2g__LogType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSSTL-{000000000}</displayFormat>
        <label>Customer Statements Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Statements Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>